tests/invalid/runtime/io_write_type_text.pts
import Io;

function main() : void {
    var f = Io.openText("io_text_bad.txt", "w");
    var data = [1, 2, 3];
    f.write(data);
}
